--- a/graph/gRaphael/index3.html
+++ b/graph/gRaphael/index3.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html> 
 <html> 
 <head> 
 <meta charset=utf-8 /> 
 <title>Raphael.JS TEST</title>
-<script type="text/javascript" src="raphael.js"></script>
+<script type="text/javascript" src="js/raphael.js"></script>
 <script type="text/javascript">
 Raphael(function(){
 	var year = [2007,2008,2009,2010,2011,2012];
