--- a/graph/gRaphael/index4.html
+++ b/graph/gRaphael/index4.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="utf-8">
         <title>Raphaël · Playground</title>
-        <link rel="stylesheet" href="demo.css" type="text/css" media="screen">
+        <link rel="stylesheet" href="css/demo.css" type="text/css" media="screen">
         <!--<link rel="stylesheet" href="demo-print.css" type="text/css" media="print">-->
-        <script src="raphael-min.js"></script>
+        <script src="js/raphael-min.js"></script>
         <style media="screen">
             body {
                 margin: 0;
